[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pe-utils-importer"
authors = [
    {name = "J J", email = "jai.jalah@krakenflex.com"}
]
description = "A package for importing the static_data_functions.py and Constants.py files from the platform enablement repo into the working directory."
version = "1.0.0"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []